# windrose-server-manager

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: embedded.rs  main.rs  pid.rs  process.rs
backend/src/api/: auth.rs  backup.rs  command.rs  config.rs  health.rs  history.rs  install.rs  logs.rs  mod.rs  players.rs  schedule.rs  server.rs  setup.rs  state.rs  stats.rs  update.rs  ws.rs
backend/src/config/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: auth_service.rs  backup_service.rs  config_file_service.rs  config_service.rs  install_service.rs  log_service.rs  mod.rs  player_service.rs  schedule_service.rs  server_service.rs  stats_service.rs  update_service.rs
backend/src/state/: mod.rs
docs/: api.md  development.md
frontend/: eslint.config.js  index.html  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AppHeader.css  AppHeader.tsx  StatusBadge.css  StatusBadge.tsx
frontend/src/hooks/: useAppState.ts  useWebSocket.ts
frontend/src/types/: api.ts
frontend/src/utils/: api.ts  format.ts  permissions.ts
frontend/src/views/: AuthAdminView.css  AuthAdminView.tsx  ConfigView.css  ConfigView.tsx  DashboardView.css  DashboardView.tsx  LogsView.css  LogsView.tsx  OperationsView.css  OperationsView.tsx  PlayersView.css  PlayersView.tsx  SetupWizard.css  SetupWizard.tsx
static/: index.html
static/assets/: index-6K7l-IgV.js  index-BI548aPW.js  index-BQ9jWZD4.js  index-BY_CA0rY.js  index-BfkmVrfg.js  index-BuGC8CFO.css  index-CIHTX3lH.js  index-CIKp3OOu.js  index-CMo1VHOS.js  index-Cgffvj7D.css  index-DAF8C7Up.js  index-DcMSy2G_.js  index-DeJkuhN0.css  index-DeeaH7Sl.js  index-DqVUU5jk.css  index-DsOJ4j5c.css
