[package]
name = "windrose-server-manager"
version = "0.1.0"
edition = "2021"
description = "Windrose Server Manager — local backend binary for server management"
authors = ["Rustbeard86"]

[[bin]]
name = "windrose-server-manager"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.24"
futures = "0.3"
anyhow = "1"
regex = "1"
