[package]
name = "windrose-server-manager"
version = "0.1.0"
edition = "2021"
description = "Windrose Server Manager — local backend binary for server management"
authors = ["Rustbeard86"]

[[bin]]
name = "windrose-server-manager"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.24"
futures = "0.3"
anyhow = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-embed = { version = "8", features = ["include-exclude"] }
sysinfo = { version = "0.31", default-features = false, features = ["system", "network"] }

[profile.release]
opt-level   = "z"     # optimise for size
lto         = true    # full link-time optimisation
codegen-units = 1     # required for full LTO
strip       = true    # strip all symbols
panic       = "abort" # no unwind machinery
